crates/aion-awl/tests/fixtures/rev2/flow-shape/valid/distribute_child_collect.awl
//! Parallel fan-out over a single child-workflow track: spawn all, await
//! each in item order — strict collect (any terminal child failure fails
//! the run).
workflow fan_children
  input jobs: [Job]
  outcome done: type Done, route success

type Job     { name: String }
type Verdict { ok: Bool }
type Done    { count: Int }

child run_job(job: Job) -> Verdict

step wave
  distribute job in jobs

step delegate
  run_job(job: job) -> verdict

step gather
  collect verdict -> verdicts
  verdicts |> count -> total
  route done(count: total)
